--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<meta property="og:type" content="article" />
-	<meta property="og:image" content="/images/banner4.png" />
-	<meta property="og:title" content="burgeon" />
-	<meta property="og:description" content="tbf" />
+	<meta property="og:image" content="/images/chrysanthemum.png" />
+	<meta property="og:title" content="Burgeon" />
+	<meta property="og:description" content="Burgeon - The official book." />
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
